# tox-recreate-hook

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  hooks.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
tests/: requirements.txt  test_hooks.py
tox_recreate_hook/: __init__.py  hooks.py
