[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "tox-recreate-hook"
version = "0.1.1"
description = "(experimental) Allows hooks to be defined which are called when recreating a tox testenv."
readme = "README.rst"
keywords = [ "tox",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/python-coincidence/tox-recreate-hook"
"Issue Tracker" = "https://github.com/python-coincidence/tox-recreate-hook/issues"
"Source Code" = "https://github.com/python-coincidence/tox-recreate-hook"
Documentation = "https://tox-recreate-hook.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Typing :: Typed",
]
python-versions = [ "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "tox_recreate_hook"

[tool.mkrecipe]
extras = "all"
conda-channels = [ "python-coincidence",]

[tool.sphinx-pyproject]
github_username = "python-coincidence"
github_repository = "tox-recreate-hook"
author = "Dominic Davis-Foster"
project = "tox-recreate-hook"
copyright = "2021 Dominic Davis-Foster"
language = "en"
package_root = "tox_recreate_hook"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.httpdomain",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinxcontrib.toctree_plus",
    "sphinx_debuginfo",
    "sphinx_licenseinfo",
    "seed_intersphinx_mapping",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "furo"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.mypy]
python_version = "3.7"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true

[project.entry-points.tox]
recreate = "tox_recreate_hook"
