# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[metadata]
name = tox-recreate-hook
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = MIT License
keywords =
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/domdfcoding/tox-recreate-hook
project_urls =
    Documentation = https://tox-recreate-hook.readthedocs.io/en/latest
    Issue Tracker = https://github.com/domdfcoding/tox-recreate-hook/issues
    Source Code = https://github.com/domdfcoding/tox-recreate-hook
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Typing :: Typed

[options]
python_requires = >=3.7
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc-source
    tests
    tests.*

[mypy]
python_version = 3.7
namespace_packages = True
check_untyped_defs = True
warn_unused_ignores = True

[options.entry_points]
tox = recreate = tox_recreate_hook
